# ros2-anomaly-detection

./: README.md
anomaly_repo/thesis_workspace/ae/lstm/: package.xml  setup.cfg  setup.py
anomaly_repo/thesis_workspace/ae/lstm/lstm/: lstm.py
anomaly_repo/thesis_workspace/aggregator/: CMakeLists.txt  package.xml
anomaly_repo/thesis_workspace/aggregator/src/: aggregator.cpp
anomaly_repo/thesis_workspace/engine/: mlserver.py  model_W20_U64_mae.keras
anomaly_repo/thesis_workspace/ml/: datapivot.py  feature_table.json  features.py  min_max_scaler.pkl  scaled_training_data.npy  training_data.csv
